alterações na home, e titulos

--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
         </ul>
     </nav>
     </header>
-    <div id="content"></div>
-    <div id="footer"></div>
+    <div class="container-fluid">
+        <div id="content" class="row align-items-center">
+            <div class="col"></div>
+        </div>
+    </div>
 </body>
 
 </html>
