--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -11,113 +11,112 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div id="rowP" class="row align-items-center text-center">
-            <div class="col-sm-12 col-md-12 col-lg-12">
-                <h1>Habilidades</h1>
-                <div class="row">
-                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="html5" type="button" class="btn" id="tooltipHtml5" title="Html5">
-                            <div id="iconHtml5"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="css3" type="button" class="btn  btn-lg" id="tooltipCss3" title="Css3">
-                            <div id="iconCss3"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
 
-                        <button id="javascript" type="button" class="btn  btn-lg" id="tooltipJavaScript" title="JavaScript">
-                            <div id="iconJavascript"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+    <div class="row justify-content-center align-items-center text-center">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <h1>Habilidades</h1>
+            <div class="row">
+                <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="html5" type="button" class="btn" id="tooltipHtml5" title="Html5">
+                        <div id="iconHtml5"></div>
+                    </button>
+                </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="css3" type="button" class="btn  btn-lg" id="tooltipCss3" title="Css3">
+                        <div id="iconCss3"></div>
+                    </button>
+                </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
 
-                        <button id="jquery" type="button" class="btn  btn-lg" id="tooltipJquery" title="Jquery">
-                            <div id="iconJquery"></div>
-                        </button>
-                    </div>
-                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+                    <button id="javascript" type="button" class="btn  btn-lg" id="tooltipJavaScript" title="JavaScript">
+                        <div id="iconJavascript"></div>
+                    </button>
                 </div>
-                <div class="row">
-                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="bootstrap" type="button" class="btn  btn-lg" id="tooltipBootstrap" title="Bootstrap">
-                            <div id="iconBootstrap"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="figma" type="button" class="btn  btn-lg" id="tooltipFigma" title="Figma">
-                            <div id="iconFigma"></div>
-                        </button>
-                    </div>
-                    
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="python" type="button" class="btn  btn-lg" id="tooltipPython" title="Python">
-                            <div id="iconPython"></div>
-                        </button>
-                    </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
 
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="react" type="button" class="btn  btn-lg" id="tooltipReact" title="React">
-                            <div id="iconReact"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="vue" type="button" class="btn  btn-lg" id="tooltipVue" title="Vue">
-                            <div id="iconVue"></div>
-                        </button>
-                    </div>
-                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
+                    <button id="jquery" type="button" class="btn  btn-lg" id="tooltipJquery" title="Jquery">
+                        <div id="iconJquery"></div>
+                    </button>
                 </div>
-                <div class="row">
-                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="flask" type="button" class="btn  btn-lg" id="tooltipFlask" title="Flask">
-                            <div id="iconFlask"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="postgresql" type="button" class="btn  btn-lg" id="tooltipPostgresql" title="Postgresql">
-                            <div id="iconPostgresql"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="php" type="button" class="btn  btn-lg" id="tooltipPhp" title="PHP 8">
-                            <div id="iconPhp"></div>
-                        </button>
-                    </div>
+                <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="bootstrap" type="button" class="btn  btn-lg" id="tooltipBootstrap" title="Bootstrap">
+                        <div id="iconBootstrap"></div>
+                    </button>
+                </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="figma" type="button" class="btn  btn-lg" id="tooltipFigma" title="Figma">
+                        <div id="iconFigma"></div>
+                    </button>
+                </div>
 
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="joomla" type="button" class="btn  btn-lg" id="tooltipJoomla" title="Joomla">
-                            <div id="iconJoomla"></div>
-                        </button>
-                    </div>
-                    <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="python" type="button" class="btn  btn-lg" id="tooltipPython" title="Python">
+                        <div id="iconPython"></div>
+                    </button>
                 </div>
-                <div class="row">
-                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="wordpress" type="button" class="btn  btn-lg" id="tooltipWordpress" title="Wordpress">
-                            <div id="iconWordpress"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="git" type="button" class="btn  btn-lg"id="tooltipGit" title="Git">
-                            <div id="iconGit"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                        <button id="github" type="button" class="btn  btn-lg"id="tooltipGithub" title="Github">
-                            <div id="iconGithub"></div>
-                        </button>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
-                    <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
+
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="react" type="button" class="btn  btn-lg" id="tooltipReact" title="React">
+                        <div id="iconReact"></div>
+                    </button>
                 </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="vue" type="button" class="btn  btn-lg" id="tooltipVue" title="Vue">
+                        <div id="iconVue"></div>
+                    </button>
+                </div>
+                <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
+            </div>
+            <div class="row">
+                <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="flask" type="button" class="btn  btn-lg" id="tooltipFlask" title="Flask">
+                        <div id="iconFlask"></div>
+                    </button>
+                </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="postgresql" type="button" class="btn  btn-lg" id="tooltipPostgresql" title="Postgresql">
+                        <div id="iconPostgresql"></div>
+                    </button>
+                </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="php" type="button" class="btn  btn-lg" id="tooltipPhp" title="PHP 8">
+                        <div id="iconPhp"></div>
+                    </button>
+                </div>
+
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="joomla" type="button" class="btn  btn-lg" id="tooltipJoomla" title="Joomla">
+                        <div id="iconJoomla"></div>
+                    </button>
+                </div>
+                <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="wordpress" type="button" class="btn  btn-lg" id="tooltipWordpress" title="Wordpress">
+                        <div id="iconWordpress"></div>
+                    </button>
+                </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="git" type="button" class="btn  btn-lg" id="tooltipGit" title="Git">
+                        <div id="iconGit"></div>
+                    </button>
+                </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
+                    <button id="github" type="button" class="btn  btn-lg" id="tooltipGithub" title="Github">
+                        <div id="iconGithub"></div>
+                    </button>
+                </div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
+                <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
             </div>
         </div>
     </div>
