--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -14,12 +14,11 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div id="rowP" class="row align-items-center">
+<div class="row justify-content-center align-items-center text-center">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
                 <h1>Projetos</h1>
                 <div class="row">
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch justify-content-center">
                         <div class="card" title="O site é composto por 3 seções:
 
 👤 Clientes: cadastrar, listar, pesquisar cliente especifico, deletar e atualizar (nome e telefone do cliente pesquisado);
@@ -30,10 +29,19 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div id="card">
-                            <h4 class="card-title">Em breve</h4>
-                            <div id="div2" class="fa"></div>
+                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch justify-content-center">
+                        <div class="card" title="Projeto desenvolvido durante as aulas do curso de react (aula 16.5 ate 37)
+É composto por 2 secões:
+
+🏠 Home: tela de boas vindas, criar projeto;
+⚒️ Projetos: exibir meus projetos, criar projeto, editar projeto e excluir projeto;
+
+    ✏️ editar projeto: exibir detalhes do projeto (categoria, total de orçamento, total utilizado, restante do orçamento), editar projeto, adicionar serviços, exibir serviços (nome do serviço, custo total e a descrição) e excluir serviço;
+
+🏢 Empresa e 📞 Contato: criados para testar funcionalidade dos routes.">
+                            <a href="https://github.com/Jana-SI/costs_projeto_curso_react">
+                                <img class="card-img" src="components/img/printCost.png">
+                            </a>
                         </div>
                     </div>
                     <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
@@ -63,7 +71,6 @@
                 </div>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
