--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div id="rowP" class="row align-items-center">
+        <div class="row justify-content-center align-items-center text-center">
             <div class="col-sm-12 col-md-5 col-lg-4">
                 <img class="rounded-circle mx-auto d-block" id="imgSobre" src="components/img/img_minha.jpg"
                     alt="foto" />
@@ -28,29 +27,6 @@
                 <p>Desde do inicio da faculdade sou apaixonada por desenvolvimento Front-end. Estou sempre estudando o
                     que há de novo e popular nesta área.</p>
 
-                <p>As principais tecnologias que tenho conhecimento são:
-                    HTML5 <i class="iconSobre fa-brands fa-html5"></i>,
-                    CSS3 <i class="iconSobre fa-brands fa-css3-alt"></i>,
-                    JavaScript <i class="iconSobre fa-brands fa-square-js"></i>,
-                    Jquery <img class="iconSobre" src="components/icones/icons8-jquery-verde.png" alt="icon_jquery">,
-                    Bootstrap <i class="iconSobre bi bi-bootstrap-fill"></i> e
-                    Python <img class="iconSobre" src="components/icones/icons8-python-16.png" alt="icon_jquery">.
-                </p>
-
-                <p>Outras tecnologias e frameworks que tenho contato são:
-                    React <i class="iconSobre fa-brands fa-react"></i>,
-                    Vue <i class="iconSobre fa-brands fa-vuejs"></i>,
-                    Figma <img class="iconSobre" src="components/icones/icons8-figma-16.png"
-                    alt="icon_flask">,
-                    Flask <img class="iconSobre" src="components/icones/icons8-flask-32.png"
-                    alt="icon_flask">,
-                    Postgresql <img class="iconSobre" src="components/icones/icons8-postgresql-verde.png"
-                        alt="icon_postgeesql">,
-                    PHP 8 <i class="iconSobre fa-brands fa-php"></i>,
-                    Joomla <i class="iconSobre fa-brands fa-joomla"></i>,
-                    Wordpress <i class="iconSobre fa-brands fa-wordpress"></i> e
-                    Git <i class="iconSobre  fa-brands fa-git-alt"></i>.</p>
-
                 <p>Amo meus
                     <i class="iconSobre fa-solid fa-cat"></i> pets
                     <i class="iconSobre fa-solid fa-dog"></i>,
@@ -63,7 +39,6 @@
                 </p>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
