ajustes em todas as paginas.

--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -11,112 +11,168 @@
 </head>
 
 <body>
-
-    <div class="row justify-content-center align-items-center text-center">
-        <div class="col-sm-12 col-md-12 col-lg-12">
-            <h1>Habilidades</h1>
-            <div class="row">
-                <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="html5" type="button" class="btn" id="tooltipHtml5" title="Html5">
-                        <div id="iconHtml5"></div>
-                    </button>
+    <div id="habilidades" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 ">
+        <h1>Habilidades</h1>
+        <div class="row row-2-cols-8 g-3 text-center">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/html5.png" class="card-img-top mx-auto" alt="icone_html5">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">HTML5</p>
+                    </div>
                 </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="css3" type="button" class="btn  btn-lg" id="tooltipCss3" title="Css3">
-                        <div id="iconCss3"></div>
-                    </button>
-                </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-
-                    <button id="javascript" type="button" class="btn  btn-lg" id="tooltipJavaScript" title="JavaScript">
-                        <div id="iconJavascript"></div>
-                    </button>
-                </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-
-                    <button id="jquery" type="button" class="btn  btn-lg" id="tooltipJquery" title="Jquery">
-                        <div id="iconJquery"></div>
-                    </button>
-                </div>
-                <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
             </div>
-            <div class="row">
-                <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="bootstrap" type="button" class="btn  btn-lg" id="tooltipBootstrap" title="Bootstrap">
-                        <div id="iconBootstrap"></div>
-                    </button>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/css3.png" class="card-img-top mx-auto" alt="icone_css3">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">CSS3</p>
+                    </div>
                 </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="figma" type="button" class="btn  btn-lg" id="tooltipFigma" title="Figma">
-                        <div id="iconFigma"></div>
-                    </button>
-                </div>
-
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="python" type="button" class="btn  btn-lg" id="tooltipPython" title="Python">
-                        <div id="iconPython"></div>
-                    </button>
-                </div>
-
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="react" type="button" class="btn  btn-lg" id="tooltipReact" title="React">
-                        <div id="iconReact"></div>
-                    </button>
-                </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="vue" type="button" class="btn  btn-lg" id="tooltipVue" title="Vue">
-                        <div id="iconVue"></div>
-                    </button>
-                </div>
-                <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
             </div>
-            <div class="row">
-                <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="flask" type="button" class="btn  btn-lg" id="tooltipFlask" title="Flask">
-                        <div id="iconFlask"></div>
-                    </button>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/javascript.png" class="card-img-top mx-auto" alt="icone_JavaScript">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">JAVASCRIPT</p>
+                    </div>
                 </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="postgresql" type="button" class="btn  btn-lg" id="tooltipPostgresql" title="Postgresql">
-                        <div id="iconPostgresql"></div>
-                    </button>
-                </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="php" type="button" class="btn  btn-lg" id="tooltipPhp" title="PHP 8">
-                        <div id="iconPhp"></div>
-                    </button>
-                </div>
-
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="joomla" type="button" class="btn  btn-lg" id="tooltipJoomla" title="Joomla">
-                        <div id="iconJoomla"></div>
-                    </button>
-                </div>
-                <div class="col-1 col-sm-2 col-md-2 col-lg-2"></div>
             </div>
-            <div class="row">
-                <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="wordpress" type="button" class="btn  btn-lg" id="tooltipWordpress" title="Wordpress">
-                        <div id="iconWordpress"></div>
-                    </button>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/bootstrap.png" class="card-img-top mx-auto" alt="icone_Bootstrap">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">BOOTSTRAP</p>
+                    </div>
                 </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="git" type="button" class="btn  btn-lg" id="tooltipGit" title="Git">
-                        <div id="iconGit"></div>
-                    </button>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/jquery.png" class="card-img-top mx-auto" alt="icone_jquery">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">JQUERY</p>
+                    </div>
                 </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2">
-                    <button id="github" type="button" class="btn  btn-lg" id="tooltipGithub" title="Github">
-                        <div id="iconGithub"></div>
-                    </button>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width" src="../components/img/React-icon.svg" class="card-img-top mx-auto" alt="icone_react">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">REACT</p>
+                    </div>
                 </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2"></div>
-                <div class="col-0 col-sm-1 col-md-1 col-lg-1"></div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/vue.png" class="card-img-top mx-auto" alt="icone_vue">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">VUE</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_height" src="../components/img/python.png" class="card-img-top mx-auto" alt="icone_python">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">PYTHON</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/flask.png" class="card-img-top mx-auto" alt="icone_flask">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">FLASK</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body d-flex justify-content-center align-items-center flex-wrap">
+                        <img id="img_width" src="../components/img/php.png" class="card-img-top mx-auto" alt="icone_php">
+                    </div>
+                    <div class="card-footer">
+                        <p class="card-text">PHP</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_height" src="../components/img/postgresql.png" class="card-img-top mx-auto" alt="icone_postgresql">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">POSTGRESQL</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/joomla.png" class="card-img-top mx-auto" alt="icone_joomla">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">JOOMLA</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/wordpress.png" class="card-img-top mx-auto" alt="icone_wordpress">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">WORDPRESS</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/git.png" class="card-img-top mx-auto" alt="icone_git">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">GIT</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width_height" src="../components/img/github.png" class="card-img-top mx-auto" alt="icone_github">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">GITHUB</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <img id="img_width" src="../components/img/figma.png" class="card-img-top mx-auto" alt="icone_figma">
+                        </div>
+                    <div class="card-footer">
+                        <p class="card-text">FIGMA</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
