--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,40 +5,46 @@
     <script type="text/javascript" src="components/scripts/idade.js"></script>
     <title>Sobre mim</title>
     <!--icon-->
-    <link rel="icon" type="image/x-icon" 
-    href="components/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="components/img/favicon.ico">
 </head>
 
 <body>
-        <div class="row justify-content-center align-items-center text-center">
-            <div class="col-sm-12 col-md-5 col-lg-4">
-                <img class="rounded-circle mx-auto d-block" id="imgSobre" src="components/img/img_minha.jpg"
-                    alt="foto" />
-            </div>
-            <div class="col-sm-12 col-md-5 col-lg-8 text-justify">
+    <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 col-xxl-8">
+        <div class="card mb-3">
+            <div class="row g-0">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                    <img class="rounded-circle mx-auto d-block img-fluid" id="imgSobre"
+                        src="components/img/img_minha.jpg" alt="foto" />
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h1 class="card-title text-center">Sobre mim</h1>
+                        <p class="card-text">Meu nome é Janaina, tenho <span id="idade"></span> anos, gaúcha de Rio
+                            Grande - RS. Sou
+                            desenvolvedora front-end, Bacharela em Sistemas de informação (2019) <i
+                                class="iconSobre bi bi-mortarboard"></i> e Mestra em engenharia de computação (2022)
+                            <i class="iconSobre bi bi-mortarboard-fill"></i>.
+                        </p>
 
-                <h1 class="text-center">Sobre mim</h1>
+                        <p class="card-text">Desde do inicio da faculdade sou apaixonada por desenvolvimento
+                            Front-end. Estou sempre estudando o
+                            que há de novo e popular nesta área.</p>
 
-                <p>Meu nome é Janaina, tenho <span id="idade"></span> anos, gaúcha de Rio Grande - RS. Sou
-                    desenvolvedora front-end, Bacharela em Sistemas de informação (2019) <i
-                        class="iconSobre bi bi-mortarboard"></i> e Mestra em engenharia de computação (2022) <i
-                        class="iconSobre bi bi-mortarboard-fill"></i>.</p>
-
-                <p>Desde do inicio da faculdade sou apaixonada por desenvolvimento Front-end. Estou sempre estudando o
-                    que há de novo e popular nesta área.</p>
-
-                <p>Amo meus
-                    <i class="iconSobre fa-solid fa-cat"></i> pets
-                    <i class="iconSobre fa-solid fa-dog"></i>,
-                    música <i class="iconSobre bi bi-music-note-beamed"></i>,
-                    animes <i class="iconSobre fa-solid fa-hat-wizard"></i>,
-                    games <i class="iconSobre fa-solid fa-gamepad"></i>,
-                    séries <i class="iconSobre fa-solid fa-clapperboard"></i>
-                    e
-                    filmes <i class="iconSobre bi bi-film"></i>.
-                </p>
+                        <p class="card-text">Amo meus
+                            <i class="iconSobre fa-solid fa-cat"></i> pets
+                            <i class="iconSobre fa-solid fa-dog"></i>,
+                            música <i class="iconSobre bi bi-music-note-beamed"></i>,
+                            animes <i class="iconSobre fa-solid fa-hat-wizard"></i>,
+                            games <i class="iconSobre fa-solid fa-gamepad"></i>,
+                            séries <i class="iconSobre fa-solid fa-clapperboard"></i>
+                            e
+                            filmes <i class="iconSobre bi bi-film"></i>.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
