--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
     </nav>
     </header>
     <div class="container-fluid">
-        <div id="content" class="row align-items-center">
-            <div class="col"></div>
+        <div id="content" class="row justify-content-center align-items-center">
         </div>
     </div>
 </body>
