--- a/pages/projetos.html
+++ b/pages/projetos.html
@@ -14,63 +14,107 @@
 </head>
 
 <body>
-<div class="row justify-content-center align-items-center text-center">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                <h1>Projetos</h1>
-                <div class="row">
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch justify-content-center">
-                        <div class="card" title="O site é composto por 3 seções:
+    <div class="col-12 col-sm-12 col-md-12 col-lg-12" id="cards">
+        <h1>Projetos</h1>
+        <div class="row row-cols-2 row-col-sm-2 row-cols-md-3 row-col-lg-3 row-col-xl-3 row-col-xxl-3 g-3">
+            <div class="col">
+                <div class="card">
+                    <div class="card-header">
+                        <h2 class="card-title">🐱Pet Lovers CRUD🐶</h2>
+                    </div>
+                    <img src="../components/img/printhome.png" class="card-img" alt="print_pet_lovers_crud">
+                    <div class="card-body">
+                        <h5 class="card-title">Seções</h5>
 
-👤 Clientes: cadastrar, listar, pesquisar cliente especifico, deletar e atualizar (nome e telefone do cliente pesquisado);
-🐰 Pets: cadastrar, listar, pesquisar pet especifico, deletar, atualizar (nome, tipo, raça e data de nascimento do cliente pesquisado ) e associar a mais um dono;
-🩺 Consulta: agendar, listar, pesquisar historico de consultas do pet, consultas do dia, proximas consultas, historico total de consultas, deletar e atualizar (data e hora das próximas consultas).">
-                            <a href="https://github.com/Jana-SI/pet_lovers_crud">
-                                <img class="card-img" src="components/img/printhome.png">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch justify-content-center">
-                        <div class="card" title="Projeto desenvolvido durante as aulas do curso de react (aula 16.5 ate 37)
-É composto por 2 secões:
+                        <p class="card-text text-left">O site é composto por 3 seções:</p>
 
-🏠 Home: tela de boas vindas, criar projeto;
-⚒️ Projetos: exibir meus projetos, criar projeto, editar projeto e excluir projeto;
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">👤 Clientes: cadastrar, listar, pesquisar cliente especifico,
+                                deletar e atualizar (nome e telefone do cliente pesquisado);</li>
 
-    ✏️ editar projeto: exibir detalhes do projeto (categoria, total de orçamento, total utilizado, restante do orçamento), editar projeto, adicionar serviços, exibir serviços (nome do serviço, custo total e a descrição) e excluir serviço;
+                            <li class="list-group-item">🐰 Pets: cadastrar, listar, pesquisar pet especifico, deletar,
+                                atualizar (nome, tipo, raça e data de nascimento do cliente pesquisado) e associar a
+                                mais um dono;</li>
 
-🏢 Empresa e 📞 Contato: criados para testar funcionalidade dos routes.">
-                            <a href="https://github.com/Jana-SI/costs_projeto_curso_react">
-                                <img class="card-img" src="components/img/printCost.png">
-                            </a>
+                            <li class="list-group-item">🩺 Consulta: agendar, listar, pesquisar historico de consultas
+                                do pet, consultas do dia, proximas consultas, historico total de consultas, deletar e
+                                atualizar (data e hora das próximas consultas).</li>
+                        </ul>
+
+                        <p class="card-text">Tecnologias utilizadas neste site:</p>
+                        <div class="text-center">
+                            <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" />
+                            <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" />
+                            <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" />
+                            <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" />
+                            <img src="https://img.shields.io/badge/Flask-000000?style=for-the-badge&logo=flask&logoColor=white" />
+                            <img src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" />
                         </div>
                     </div>
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div id="card">
-                            <h4 class="card-title">Em breve</h4>
-                            <div id="div3" class="fa"></div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div id="card">
-                            <h4 class="card-title">Em breve</h4>
-                            <div id="div4" class="fa"></div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div id="card">
-                            <h4 class="card-title">Em breve</h4>
-                            <div id="div5" class="fa"></div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-4 col-lg-4 d-flex align-items-center justify-content-center">
-                        <div id="card">
-                            <h4 class="card-title">Em breve</h4>
-                            <div id="div6" class="fa"></div>
-                        </div>
+                    <div class="card-footer">
+                        <h6 class="card-subtitle">
+                            <img id="img_width_height" src="../components/img/github.png" class="card-img mx-auto" alt="icone_github"> Repositório: <a class="card-link" href="https://github.com/Jana-SI/pet_lovers_crud">clique aqui</a></h6>
                     </div>
                 </div>
             </div>
+            <div class="col">
+                <div class="card">
+                    <div class="card-header">
+                        <h2 class="card-title">🪙 Projeto Cost - Curso React react <img
+                                src="https://img.shields.io/badge/React-20232A?style=for-the-badge&logo=react&logoColor=61DAFB" />
+                        </h2>
+                    </div>
+                    <img class="card-img" src="components/img/printCost.png">
+                    <div class="card-body">
+                        <p class="card-text">Projeto desenvolvido durante as aulas do curso de react (aula 16.5 ate 37)
+                        </p>
+
+                        <h5 class="card-title">É composto por 2 secões:</h5>
+
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">🏠 Home: tela de boas vindas, criar projeto;</li>
+
+                            <li class="list-group-item">⚒️ Projetos: exibir meus projetos, criar projeto, editar projeto e excluir projeto;                           
+
+                                <div class="ms-2 me-auto">
+                                    ✏️ Editar projeto: exibir detalhes do projeto (categoria,
+                                        total de orçamento, total utilizado, restante do orçamento), editar projeto,
+                                        adicionar serviços, exibir serviços (nome do serviço, custo total e a descrição) e
+                                        excluir serviço;
+                                  </div>
+                              
+                            </li>
+
+                            <li class="list-group-item">🏢 Empresa e 📞 Contato: criados para testar funcionalidade dos routes.</li>
+                        </ul>
+
+                        <h5 class="card-title">⚙️ Rodar projeto</h5>
+
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">npm start</li>
+                            <li class="list-group-item">npm run backend</li>
+                        </ul>
+                        
+
+                    </div>
+
+                    <div class="card-footer">
+                        <h6 class="card-subtitle">💻 Curso: <a class="card-link"
+                            href="https://www.youtube.com/playlist?list=PLnDvRpP8BneyVA0SZ2okm-QBojomniQVO">Curso de React - Matheus Battisti - Hora de Coda</a></h6>
+                        <h6 class="card-subtitle">
+                            <img id="img_width_height" src="../components/img/github.png" class="card-img mx-auto" alt="icone_github"> Repositório: <a class="card-link"
+                            href="https://github.com/Jana-SI/costs_projeto_curso_react">clique aqui</a></h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col" id="card">
+                <div class="card text-center d-flex align-items-center justify-content-center">
+                    <h4 class="card-title">Em breve</h4>
+                    <div id="lupa" class="fa"></div>
+                </div>
+            </div>
         </div>
+    </div>
 </body>
 
 </html>
